20230620-인증서 이미지
인증서 이미지

--- a/LMS-M/education.html
+++ b/LMS-M/education.html
@@ -123,7 +123,7 @@
 						</div>
 					</div>
 					<div class="rights">
-						<p class="btn btn-outline-light">
+						<p class="btn btn-outline-light" onclick = "location.href='classroom.html'">
 							<i class="material-symbols-outlined">contact_mail</i>
 							<span>내 강의실</span>
 						</p>
@@ -242,12 +242,12 @@
 							<span>직무교육</span> 검색
 							<i class="material-symbols-outlined">search</i>
 						</p-->
-						<form class="position-relative">
+						<div class="position-relative">
 							<input class="form-control" type="search" aria-label="Search" placeholder="카테고리 검색">
 							<button class="bg-transparent position-absolute top-50 end-0 translate-middle-y border-0 text-primary-hover text-reset" type="submit">
 								<i class="material-symbols-outlined h5">search</i>
 							</button>
-						</form>
+						</div>
 
 					</div>
 					<div class="days mt-4">
